--- a/operations-manual/pages/Programming/index.mdx
+++ b/operations-manual/pages/Programming/index.mdx
@@ -1,34 +1,171 @@
 import {Callout} from 'nextra/components';
 import Head from 'next/head';
 import { Cards, Card } from 'nextra/components';
-import { ProgrammingHero, SkillsMatrix, ProgrammingPath, LiveCodeDemo, ProgrammingStats, BenefitCard, TechStack, ProgrammingWingsGrid, WingComparisonWidget } from '../../components';
+import { GenericHero, GenericStats, GenericGrid, GenericCard, GenericWidget, SoftwareSkillsMatrix } from '../../Components/index';
 
 <Head>
     <title>Programming Excellence - FEDS201</title>
     <meta property="og:title" content="Programming Excellence - FEDS201" key="title" />
     <meta property="og:description" content="Master FRC robot programming with our comprehensive guide - from Java fundamentals to advanced autonomous systems" />
 </Head>
-
-<ProgrammingHero />
+<GenericHero 
+  title="Programming "
+  backgroundType='pattern'
+  height="sm"
+  subtitle="Where Code Meets Competition… and Occasionally, Coffee-Fueled Chaos ☕💻"
+  variant="gradient"
+  size="large"
+  textAlign='center'
+/>
 
 <div style={{ maxWidth: '1200px', margin: '0 auto', padding: '0 20px' }}>
 
-# Welcome to FRC Programming Excellence
+# Welcome to FEDS 201 Programming SubGroup
 
-**Where Code Meets Competition**
+{/* Write a Dexsctiprion on what a Programming Team will do, make it houmous and fun to read */}
+Welcome to the FEDS 201 Programming SubGroup — where ideas turn into logic, logic turns into code, and code turns into... well, a lot of Stack Overflow and Chief Dephi tabs. 🧠💻
 
-Programming in FIRST Robotics isn't just about writing code—it's about bringing mechanical marvels to life, creating intelligent autonomous systems, and pushing the boundaries of what's possible in competitive robotics. You're about to embark on a journey that combines software engineering, real-time systems, and competitive strategy.
+We’re the team that lives somewhere between flowcharts and infinite `while(true)` loops. Whether it's debugging something that “worked yesterday” or arguing over tabs vs. spaces (tabs, obviously), we thrive on building smart systems that actually do things.
 
-<ProgrammingStats />
+<br />
+<strong> What Do We Do Exactly?</strong> 
 
-## 🧩 FRC Wing vs Software Wing — Roles in FEDS Programming
+<p> We solve problems. We create tools. We build platforms, write scripts, design algorithms, and sometimes name our variables after obscure movie characters. Basically, if it involves code — we’re in.</p>
 
-Our programming team operates with two specialized wings, each bringing unique expertise to create a comprehensive technology ecosystem that powers our competitive success.
+We don’t just learn to program.
 
-<ProgrammingWingsGrid />
+<p>We learn to think like engineers, dream like creators, and occasionally panic like developers at 11:59 PM.
+So whether you're a seasoned coder or someone w ho just wrote your first `print("Hello World")` — welcome. You're in the right place.</p>
+<br />
 
-<WingComparisonWidget />
+---
+### Our Programming Stats
 
-## 🚀 Programming Path
+<strong>What makes the FEDS 201 Programming SubGroup tick? </strong>Numbers, caffeine, and an unhealthy obsession with version control. Below are some stats that sum up who we are — and yes, they’re all real (we wish we were kidding about the commit count).
+
+<strong>Each number tells a story </strong>: of all-nighters before deadlines, of joyful bug squashing, and of those magical moments when the code actually works on the first try (rare, but legendary).
+
+We’re not just counting lines of code. We’re counting passion, chaos, and surprisingly well-named variables.
+
+
+
+<GenericStats
+  layout="grid"
+  variant="cards"
+  countUp={true}
+  animation={{ enabled: true, duration: 2000, delay: 100 }}
+ stats={[
+  {
+    value: 2,
+    label: 'Programming Wings',
+    icon: '🧩',
+    description: 'Our team is divided into two specialties—FRC and Software Wings—working in sync to cover both battlefield execution and digital warfare.'
+  },
+  {
+    value: 15,
+    label: 'Programming Languages',
+    icon: '💻',
+    description: 'From Java and Python to TypeScript, our codebase speaks more languages than the average human.',
+    suffix: '+'
+  },
+  {
+    value: '100%',
+    label: 'Robot Functionality',
+    icon: '🤖',
+    description: 'Every subsystem—drivetrain, intake, shooter, climber—is powered by precision code for autonomous and driver-controlled modes'
+  },
+  {
+    value: '24/7',
+    label: 'Development Cycle',
+    icon: '⚡',
+    description: 'With CI/CD pipelines, GitHub commits at midnight, and ideas at sunrise, we never really stop'
+  },
+  {
+    value: 3,
+    label: 'Years of Experience',
+    icon: '📚',
+    description: "Our team's collective brainpower comes from years of battle-tested strategies, builds, and fixes",
+    suffix: '+'
+  },
+  {
+    value: 120000,
+    label: 'Codebase Commits',
+    icon: '📦',
+    description: 'Yes, we actually commit that much. Don"t ask how many of those are “fix typo” or “temporary debug log.”',
+    suffix: '+'
+  }
+]}
+
+/>
+
+## 🧩 FRC Wing vs Software Wing
+
+At FEDS 201, our programming team is split into two mighty forces — the FRC Wing and the Software Wing — like two brain hemispheres working in perfect sync (most of the time).
+
+The FRC Wing is all about precision, performance, and panic-proof code. They're the ones writing the core logic that makes the robot behave, react, and (hopefully) not explode. Think of them as the pilots of real-time systems — fast, focused, and fluent in Java.
+
+Meanwhile, the Software Wing is the quiet mastermind in the background, building the tools and platforms that give our team its strategic edge. From scouting apps to analytics dashboards to backend systems that probably deserve their own Netflix docuseries, this wing works year-round across a jungle of programming languages.
+
+<GenericGrid 
+  layout="masonry"
+  variant="cards"
+  items={[
+    {
+      title: "FRC Wing",
+      description: "The FRC Wing is the heart of our robot's programming, focusing on real-time control, autonomous systems, and competition strategies.",
+      icon: "🤖",
+      color: "blue",
+      link: "/Programming/FRC",
+      buttonText: "Explore FRC Wing"
+    },
+    {
+      title: "Software Wing",
+      description: "The Software Wing builds the digital backbone of our team, creating tools and platforms that enhance our strategic capabilities.",
+      icon: "💻",
+      color: "purple",
+      link: "/Programming/Software",
+      buttonText: "Explore Software Wing"
+    }
+  ]}
+/>
+
+<GenericWidget 
+  title="Wing Comparison"
+  variant="comparison"
+  data={{
+    leftSide: {
+      title: "FRC Wing",
+      icon: "🤖",
+      color: "blue",
+      items: [
+        "Direct robot control",
+        "Real-time performance",
+        "Hardware integration",
+        "Competition-focused",
+        "Java primarily"
+      ]
+    },
+    rightSide: {
+      title: "Software Wing", 
+      icon: "💻",
+      color: "purple",
+      items: [
+        "Strategic advantage",
+        "Data-driven insights",
+        "Platform development",
+        "Year-round projects",
+        "Multi-language stack"
+      ]
+    }
+  }}
+/>
+
+<strong>In short:</strong>
+- FRC Wing writes the code that executes the mission.
+- Software Wing writes the code that wins the war.
+
+Both are essential. Both are awesome. And yes — you can be part of both. 😉
+
+
 
 </div>
